--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "babel src --out-dir . --ignore **/__tests__ --extensions \".ts,.js\"",
     "start": "medusa develop",
     "watch": "babel -w src --out-dir . --ignore **/__tests__ --extensions \".ts,.js\"",
-    "prepare": "cross-env NODE_ENV=production npm run build"
+    "prepare": "cross-env NODE_ENV=production npm run build",
+    "postinstall": "npm run build"
   },
   "peerDependencies": {
     "@medusajs/medusa": "^1.6.0",
