--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "Source plugins that allows users to import data from a Prestashop store to Medusa",
   "author": "Juan Soler <juansoler@gmail.com>",
   "license": "MIT",
-  "main": "index.js",
+  "main": "dist/",
+  "files": [
+    "dist/"
+  ],
   "scripts": {
     "seed": "medusa seed -f ./data/seed.json",
-    "build": "babel src --out-dir . --ignore **/__tests__ --extensions \".ts,.js\"",
+    "build": "babel src --out-dir dist --ignore **/__tests__ --extensions \".ts,.js\"",
     "start": "medusa develop",
-    "watch": "babel -w src --out-dir . --ignore **/__tests__ --extensions \".ts,.js\"",
+    "watch": "babel -w src --out-dir dist --ignore **/__tests__ --extensions \".ts,.js\"",
     "prepare": "cross-env NODE_ENV=production npm run build",
     "postinstall": "npm run build"
   },
@@ -39,6 +42,7 @@
     "axios-oauth-1.0a": "^0.3.6",
     "fast-xml-parser": "^4.0.12",
     "qs": "^6.11.2",
+    "slugify": "^1.6.6",
     "url-exists-deep": "^2.1.4"
   }
 }
