--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,7 @@
     "rootDir": "./src",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "outDir": "./dist",
-    "typeRoots": ["node_modules/@types"]
+    "outDir": "./dist"
   },
   "include": ["./src"],
   "exclude": ["node_modules/*", "dist"]
