--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "@pankajpatel/medusa-source-prestashop",
-  "version": "0.0.16",
+  "version": "0.0.17",
   "description": "Source plugins that allows users to import data from a Prestashop store to Medusa",
   "author": "Pankaj Patel <hello@pankaj.pro>",
   "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
   "main": "dist/index.js",
   "files": [
     "dist/"
